# rgan-demo-pytorch

./: .gitignore  LICENSE  MAINTAINERS.md  README.md  environment.yml  pyproject.toml  requirements.txt  rgan.py  rgan_demo.ipynb  utils.py
examples/MNIST/: rgan_mnist_demo_full.ipynb
examples/nonlinear/: beta_prior.ipynb  uniform_prior.ipynb
examples/wobbly_plate/: deterministic.ipynb  stochastic.ipynb
rgan/: cgan.py  rejection.py  rgan.py  rgan_MNIST.py  rgan_stochastic.py  utils.py
